# urdf_import_rviz

cyberdog2/: package.xml  setup.cfg  setup.py
cyberdog2/launch/: view_cyberdog2.py
cyberdog2/meshes/visual/: abad.stl  body.stl  calf.STL  hip.stl  hip_mirror.stl  knee.stl
cyberdog2/rviz/: view.rviz
cyberdog2/urdf/: cyberdog2.urdf  go2_description.urdf  go2w_description.urdf
cyberdog2_urdf/: robot.urdf
go2/: package.xml  setup.cfg  setup.py
go2/launch/: view_go2.py
go2/meshes/collision/: base.STL  calf_mirror.STL  left_wheel.STL
go2/meshes/visual/: foot.STL  hip.STL  right_wheel.STL  thigh.STL  thigh_mirror.STL
go2/urdf/: go2_description.urdf  go2w_description.urdf
o2/: package.xml  setup.cfg  setup.py
o2/O2with_inertial/: CMakeLists.txt  package.xml
o2/O2with_inertial/config/: joint_names_O2with_inertial.yaml
o2/O2with_inertial/launch/: display.launch  gazebo.launch
o2/O2with_inertial/urdf/: O2with_inertial.csv
o2/launch/: view_o2.py
o2/meshes/collision/: L1.STL  L2.STL  L3.STL  R2.STL  R3.STL
o2/meshes/visual/: R1.STL
o2/o2/: joint_limits.yaml
o2/urdf/: o2_description.urdf
